fixed java & lib version